	Fixed bug where strikethrough and underline couldn't be toggled on existing span elements.
	Fixed bug where the postprocessor searched for nsbp instead of nbsp entities.
	Fixed bug where it was impossible to edit links that had child elements within them.
	Fixed bug where it was possible to click on the parent item of a submenu.
	Fixed so a elements gets removed when the href field is left empty, the href attribute is required in a link after all.
	Removed the indent and encode methods from the tinymce.dom.Serializer class due to performance enhancement and reduction of the API size.
Version 3.0b3 (2007-12-14)
	Added new getElement method to Editor class, returns the element that was replaced with the editor instance.
	Added new unavailable prefix for disabled controls for accessibility reasons.
	Fixed bug where regexp patterns couldn't be used for the editor_selector/editor_deselector options.
	Fixed bug where the DOM wasn't properly initialized before the onInit event was executed in popups.
	Fixed bug where font sizes where reduced by font size actions on previous spans in Safari.
	Fixed bug where HR elements got places at the wrong location in IE.
	Fixed bug where align/justify didn't work correctly on multiple paragraphs.
	Fixed bug with missing translation for cell scope settings.
	Fixed bug where selection/caret position was lost on some table actions.
	Fixed bug where editor instances couldn't be added to hidden div elements.
	Fixed bug where list elements in Safari would get an odd ID attribute.
	Fixed bug where IE would return <html/> when the editor was completely empty.
	Fixed bug where accessibility title attribute for access keys wasn't setup properly.
	Fixed bug where forecolorpicker and backcolorpicker control names wasn't working.
	Fixed bug where inserting template content didn't work in Safari due to selection exception.
	Fixed bug where absolute URLs to remote hosts couldn't be used for background images.